--- a/src/containers/Podcasterinnen/Podcasterinnen.css
+++ b/src/containers/Podcasterinnen/Podcasterinnen.css
@@ -14,7 +14,7 @@
   padding: 0;
 }
 
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 600px) {
   .podcasterinnen__list {
     grid-column-gap: 15px;
     grid-row-gap: 15px;
